--- a/index.html
+++ b/index.html
@@ -12,16 +12,67 @@
 
     <div>
         <h2>Ejemplo 1</h2>
-        <p>Solicitar DPI, nombre, apellido,  género,  fecha de nacimiento y correo electrónico de una persona y al dar clic en un deberá luego desplegar  la informaicón.</p>
+        <p>Solicitar DPI, nombre, apellido, género, fecha de nacimiento y correo electrónico de una persona y al dar clic en un
+            botón deberá luego desplegar los datos ingresados.</p>
         <a href="ej1.html">Ejemplo 1</a>
         
     </div>
     
     <div>
         <h2>Ejemplo 2</h2>
-        <p></p>
+        <p>Solicitar 5 notas y el nombre de un curso, al dar clic sobre un botón deberá mostrar el promedio obtenido en el curso e
+            indicar si aprobó o reprobó (la nota mínima para aprobar es de 70 pts.)</p>
         <a href="ej2.html">Ejemplo 2</a>        
     </div> 
+
+    <div>
+        <h2>Ejemplo 3</h2>
+        <p>Solicitar un número y al dar clic sobre un botón debe mostrar la tabla de multiplicación de dicho valor.</p>
+        <a href="ej3.html">Ejemplo 3</a>        
+    </div> 
+
+    <div>
+        <h2>Problema no.1</h2>
+        <p>Solicitar un número y al dar clic sobre un botón debe indicar si el valor es positivo, negativo o neutro.</p>
+        <a href="ej4.html">Solución</a>        
+    </div> 
+
+    <div>
+        <h2>Problema no.2</h2>
+        <p>Solicitar cuatro notas e indicar si el promedio es aprobado o reprobado, en caso de haber reprobado deberá indicar la
+            cantidad de puntos que le faltaron para para aprobar.</p>
+        <a href="ej5.html">Solución</a>        
+    </div> 
+
+    <div>
+        <h2>Problema no.3</h2>
+        <p>Solicitar un número e indicar si es par o impar.</p>
+        <a href="ej6.html">Solución</a>        
+    </div>
+
+    <div>
+        <h2>Problema no.4</h2>
+        <p>Solicitar un texto y un número e indicar si la longitud del texto es mayor, menor o igual al número ingresado.</p>
+        <a href="ej7.html">Solución</a>        
+    </div>
+
+    <div>
+        <h2>Problema no.5</h2>
+        <p>Solicitar 2 textos e indicar si los textos inician con la misma letra.</p>
+        <a href="ej8.html">Solución</a>        
+    </div>
+
+    <div>
+        <h2>Problema no.6</h2>
+        <p>Solicitar tres números e indicar cuál de ellos es el mayor y cual el menor.</p>
+        <a href="ej9.html">Solución</a>        
+    </div>
+
+    <div>
+        <h2>Problema no.7</h2>
+        <p>Solicitar un texto e indicar si la última letra que posee el texto es una “S”.</p>
+        <a href="ej10.html">Solución</a>        
+    </div>
 
 </body>
 </html>
